--- a/kdd2018.html
+++ b/kdd2018.html
@@ -47,7 +47,7 @@
 
     <div>
       <br><br>
-      <h2 class="text-center" style="color: #3478c7; font-size: 40px; padding-left: 10%; padding-right: 10%"><a href="http://www.kdd.org/kdd2018/">KDD</a> Workshop on Machine Learning and Data Mining for Podcasts (MLDM4P), 2018</h2>
+      <h2 class="text-center" style="color: #3478c7; font-size: 40px; padding-left: 20%; padding-right: 20%"><a href="http://www.kdd.org/kdd2018/">KDD</a> Workshop on Machine Learning and Data Mining for Podcasts (MLDM4P), 2018</h2>
       <br><br>
       <p class="text-center" style="font-size: 20px">Time: 8:30AM - 12:00PM August 20</p>
       <p class="text-center" style="font-size: 20px">Location: <strong>ICC London Suite Room 4 (Level 0)</strong></p>
@@ -112,7 +112,7 @@
                   </tr>
 
                   <tr>
-                  <th class="text-nowrap" scope="row"><span style="font-size: 20px">10:00–11:00</span></th>
+                  <th class="text-nowrap" scope="row"><span style="font-size: 20px">10:00–11:30</span></th>
                   <td><strong><span style="font-size: 20px">Session II: Podcasts Search and Recommendation</span></strong>
                   <br><br>
                     <div class="ui divided items">
@@ -126,7 +126,7 @@
                     <div class="item">
                     <img src="./img/gareth.jpg" alt="" width="75" height="75" >
                       <div style="padding-left: 2% " class="middle aligned content">
-                        <p><strong>Gareth Jones - Dublin City University</strong></p>
+                        <p><strong>Gareth Jones</strong> - Dublin City University</p>
                         <p>What do you want? - satisfying user information needs in podcast search</p>       
                       </div>
                     </div>
@@ -143,7 +143,7 @@
                   </tr>
 
                   <tr>
-                  <th class="text-nowrap" scope="row"><span style="font-size: 20px">11:00–12:00</span></th>
+                  <th class="text-nowrap" scope="row"><span style="font-size: 20px">11:30–12:00</span></th>
                   <td><strong><span style="font-size: 20px">Session III: Applications & Industry</span></strong>
                   <br><br>
                     <div class="ui divided items">
@@ -157,7 +157,7 @@
                     <div class="item">
                     <img src="./img/yu.jpeg" alt="" width="75" height="75" >
                       <div style="padding-left: 2% " class="middle aligned content">
-                        <p><strong>Yu Wang - Himalaya Media</strong></p>
+                        <p><strong>Yu Wang</strong> - Himalaya Media</p>
                         <p>Brief history of podcasting in China, and where it’s heading towards</p>       
                       </div>
                     </div>
@@ -203,7 +203,7 @@
 
               <div class="col-lg-6 text-center">
                     <div class="service-box">
-                      <a href="himalaya.com">
+                      <a href="www.himalaya.com">
                         <img src="./img/himalaya.jpg" width="300" height="150"></a>
                         
                     </div>
