--- a/kdd2018.html
+++ b/kdd2018.html
@@ -203,7 +203,7 @@
 
               <div class="col-lg-6 text-center">
                     <div class="service-box">
-                      <a href="www.himalaya.com">
+                      <a href="http://www.himalaya.com">
                         <img src="./img/himalaya.jpg" width="300" height="150"></a>
                         
                     </div>
