--- a/kdd2018.html
+++ b/kdd2018.html
@@ -50,7 +50,7 @@
       <h2 class="text-center" style="color: #3478c7; font-size: 40px; padding-left: 20%; padding-right: 20%"><a href="http://www.kdd.org/kdd2018/">KDD</a> Workshop on Machine Learning and Data Mining for Podcasts (MLDM4P), 2018</h2>
       <br><br>
       <p class="text-center" style="font-size: 20px">Time: 8:30AM - 12:00PM August 20</p>
-      <p class="text-center" style="font-size: 20px">Location: <strong>ICC London Suite Room 4 (Level 0), collated with <a href="http://www.kdd.org/kdd2018/venue">KDD</a></strong></p>
+      <p class="text-center" style="font-size: 20px">Location: <strong>ICC London Suite Room 4 (Level 0), co-located with <a href="http://www.kdd.org/kdd2018/venue">KDD</a></strong></p>
     </div>
 
 
