--- a/kdd2018.html
+++ b/kdd2018.html
@@ -92,7 +92,8 @@
                     <div class="item">
                       <img src="./img/suchandrika.jpeg" alt="" width="75" height="75" >
                       <div style="padding-left: 2%" class="middle aligned content">
-                        <p><strong>Suchandrika Chakrabarti</strong> - Freelance Journalist and Trainer</p>
+                        <p><strong>Suchandrika Chakrabarti</strong> - Creator of Black Mirror Cracked podcast,Freelance Journalist and Trainer
+</p>
                       </div>
                     </div>
                     <div class="item">
