--- a/kdd2018.html
+++ b/kdd2018.html
@@ -31,9 +31,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css" rel="stylesheet">
 
-    <style>
+  <style>
     .row:before, .row:after {display: none !important;}
   </style>
+
 
 
 </head>
@@ -221,6 +222,9 @@
 
 
 
+
+
+
     <section id="organizers">
 
  <!--        <div style="padding-top: 10%" class="container"> -->
@@ -228,6 +232,8 @@
                     <h2 class="section-heading">Organizers</h2>
                     <hr class="primary">
                 </div>
+
+            <p style="color: white">Organizers</p>
 
             <div class="row text-black-faded">
 
