--- a/kdd2018.html
+++ b/kdd2018.html
@@ -81,13 +81,14 @@
 
                   <tr>
                   <th class="text-nowrap" scope="row"><span style="font-size: 20px">8:40–9:30</span></th>
-                  <td><strong><span style="font-size: 20px">Session I: Finding and Consuming Podcasts (Podcasters Panel)</span></strong>
+                  <td><strong><span style="font-size: 20px">Session I: Finding and Consuming Podcasts</span></strong>
                   <br><br>
-                    <div class="ui divided items">
+                  <h3 class="ui dividing header">Podcasters Panel</h3>
+                    <div style="padding-left:5%"  class="ui divided items">
                       <div class="item">
                         <img src="./img/julie.jpg" alt="" width="75" height="75" >
                         <div style="padding-left: 2%" class="middle aligned content">
-                          <p><strong>Moderator: Julie Riederer</strong> - Spotify</p>
+                          <p><strong>Moderator: Julie Riederer</strong> - Senior User Researcher, Spotify</p>
                         </div>
                       </div>
                     <div class="item">
@@ -109,7 +110,33 @@
                         <p><strong>Lauren Hutchinson</strong> - BBC Reporter and Creator at TomorrowNeverKnows</p> 
                       </div>
                     </div>
+                
+
+                     </div>
+
+                     <br>
+
+                     <div class="ui divider"></div>
+
+                  <div class="ui divided items">
+                      <div class="item">
+                      <img src="./img/rosie.jpg" alt="" width="75" height="75" >
+                      <div style="padding-left: 2% " class="middle aligned content">
+                        <p><strong>Rosie Jones</strong> - Spotify</p> 
+                        <p>Podcasts at Spotify</p>
+                      </div>
+                    </div>
                   </div>
+
+
+                  </td>
+                  </tr>
+
+                  <tr>
+                  <th class="text-nowrap" scope="row"><span style="font-size: 20px">9:30–10:00</span></th>
+                  <td><strong><span style="font-size: 20px">Coffee Break</span></strong>
+
+
                   </td>
                   </tr>
 
@@ -160,16 +187,17 @@
                     <img src="./img/yu.jpeg" alt="" width="75" height="75" >
                       <div style="padding-left: 2% " class="middle aligned content">
                         <p><strong>Yu Wang</strong> - Himalaya Media</p>
-                        <p>Brief history of podcasting in China, and where it’s heading towards</p>       
+                        <p>Brief history of podcasting in China, and where it’s heading</p>       
                       </div>
                     </div>
+
                     <div class="item">
-                      <img src="./img/rosie.jpg" alt="" width="75" height="75" >
                       <div style="padding-left: 2% " class="middle aligned content">
-                        <p><strong>Rosie Jones</strong> - Spotify</p> 
-                        <p>Podcasts at Spotify</p>
+                        <p>Discussions</p>
+                             
                       </div>
                     </div>
+
                   </div>
                   </td>
                   </tr>
