--- a/kdd2018.html
+++ b/kdd2018.html
@@ -192,8 +192,8 @@
                     </div>
 
                     <div class="item">
-                      <div style="padding-left: 2% " class="middle aligned content">
-                        <p>Discussions</p>
+                      <div class="middle aligned content">
+                        <p><strong>Discussions</strong></p>
                              
                       </div>
                     </div>
