--- a/kdd2018.html
+++ b/kdd2018.html
@@ -123,7 +123,7 @@
                       <img src="./img/rosie.jpg" alt="" width="75" height="75" >
                       <div style="padding-left: 2% " class="middle aligned content">
                         <p><strong>Rosie Jones</strong> - Spotify</p> 
-                        <p>Podcasts at Spotify</p>
+                        <p>Talk title: Podcasts at Spotify</p>
                       </div>
                     </div>
                   </div>
@@ -149,21 +149,21 @@
                         <img src="./img/martha.jpg" alt="" width="75" height="75" >
                         <div style="padding-left: 2% " class="middle aligned content">
                           <p><strong>Martha Larson</strong> - Delft University of Technology</p>
-                          <p>Ten Shortcuts to Avoid in Podcast Mining (from Two Decades of Spoken Content Experience)</p>
+                          <p>Talk title: Ten Shortcuts to Avoid in Podcast Mining (from Two Decades of Spoken Content Experience)</p>
                         </div>
                       </div>
                     <div class="item">
                     <img src="./img/gareth.jpg" alt="" width="75" height="75" >
                       <div style="padding-left: 2% " class="middle aligned content">
                         <p><strong>Gareth Jones</strong> - Dublin City University</p>
-                        <p>What do you want? - satisfying user information needs in podcast search</p>       
+                        <p>Talk title: What do you want? - satisfying user information needs in podcast search</p>       
                       </div>
                     </div>
                     <div class="item">
                       <img src="./img/maarten.jpg" alt="" width="75" height="75" >
                       <div style="padding-left: 2% " class="middle aligned content">
                         <p><strong>Maarten de Rijke</strong> - University of Amsterdam</p> 
-                        <p>Modeling and Predicting Podcast User Behavior</p>
+                        <p>Talk title: Modeling and Predicting Podcast User Behavior</p>
                       </div>
                     </div>
                   </div>
@@ -180,14 +180,14 @@
 <!--                         <img src="./img/ahmet.jpeg" alt="" width="75" height="75" > -->
                         <div class="middle aligned content">
                           <p><strong>Ahmet Gundogdu</strong> - WarnerMedia Applied Analytics Solution</p>
-                          <p>Recognizing Film Entities in Podcasts</p>
+                          <p>Talk title: Recognizing Film Entities in Podcasts</p>
                         </div>
                       </div>
                     <div class="item">
                     <img src="./img/yu.jpeg" alt="" width="75" height="75" >
                       <div style="padding-left: 2% " class="middle aligned content">
                         <p><strong>Yu Wang</strong> - Himalaya Media</p>
-                        <p>Brief history of podcasting in China, and where it’s heading</p>       
+                        <p>Talk title: Brief history of podcasting in China, and where it’s heading</p>       
                       </div>
                     </div>
 
