--- a/kdd2018.html
+++ b/kdd2018.html
@@ -177,7 +177,7 @@
                   <br><br>
                     <div class="ui divided items">
                       <div class="item">
-<!--                         <img src="./img/ahmet.jpeg" alt="" width="75" height="75" > -->
+                        <img src="./img/ahmet.jpeg" alt="" width="75" height="75" >
                         <div class="middle aligned content">
                           <p><strong>Ahmet Gundogdu</strong> - WarnerMedia Applied Analytics Solution</p>
                           <p><strong>Talk title:</strong> Recognizing Film Entities in Podcasts</p>
