--- a/kdd2018.html
+++ b/kdd2018.html
@@ -83,7 +83,7 @@
                   <th class="text-nowrap" scope="row"><span style="font-size: 20px">8:40–9:30</span></th>
                   <td><strong><span style="font-size: 20px">Session I: Finding and Consuming Podcasts</span></strong>
                   <br><br>
-                  <h3 class="ui dividing header">Podcasters Panel</h3>
+                  <h3 class="ui dividing header">Podcast Creators Panel</h3>
                     <div style="padding-left:5%"  class="ui divided items">
                       <div class="item">
                         <img src="./img/julie.jpg" alt="" width="75" height="75" >
