added two projects

--- a/index.html
+++ b/index.html
@@ -141,10 +141,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Projects</h2>
+                    <h2 class="section-heading"> Projects </h2>
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#immersive" class="portfolio-link" data-toggle="modal">
@@ -199,7 +200,8 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Research Stack</h4>
-                        <p class="text-muted">This SDK and UX framework for building research study apps on Android and iOS supports scientific research, including capturing participant consent, extensible input tasks, and the security and privacy needs necessary for IRB approval.</p>
+                        <p class="text-muted">This SDK and UX framework for building research study apps on Android and iOS supports scientific research</p>
+                        <!-- <p class="text-muted">This SDK and UX framework for building research study apps on Android and iOS supports scientific research, including capturing participant consent, extensible input tasks, and the security and privacy needs necessary for IRB approval.</p> -->
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -232,6 +234,39 @@
                     </div>
                 </div>
 
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#pushcart" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+
+                          <img src="img/portfolio/Pushcart_edit.png" class="img-responsive" alt="">
+
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4> Pushcart </h4>
+                        <p class="text-muted">Pushcart is an effortless and compatible passive data collection tool that provides objective, high frequency, household-level data on food consumption and nutrition.</p>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#limbr" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+
+                          <img src="img/portfolio/limbr_temp.png" class="img-responsive" alt="">
+
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4> Limbr </h4>
+                        <p class="text-muted">LIMBR is a suite of applications that we have developed based on the innovations developed under this funding for effective pain reporting, and self-directed management of medication and exercise tracking. </p>
+                    </div>
+                </div>
 
 
             </div>
@@ -660,7 +695,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>Leveraging Multi-Modal Sensing for Mobile Health: a Case Review in Chronic Pain. </strong><a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?reload=true&arnumber=7466807" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>Leveraging Multi-Modal Sensing for Mobile Health: a Case Review in Chronic Pain. </strong><a href="https://ieeexplore.ieee.org/document/7466807/" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             AUNG, M. S. H., ALQUADDOOMI, F., HSIEH, A., RABBI, M., YANG, L., POLLAK, J.P., ESTRIN, D. and CHOUDHURY, T. <i>IEEE Journal of Selected Topics in Signal Processing. 2016 Aug; 10(5): 962-974.</i>
 
@@ -702,7 +737,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <strong>PlateClick: Bootstrapping Food Preferences Through an Adaptive Visual Interface. </strong><a href="http://www.cs.cornell.edu/~ylongqi/paper/HsiehYWNE16.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
+                            <strong>PlateClick: Bootstrapping Food Preferences Through an Adaptive Visual Interface. </strong><a href="https://www.cs.cornell.edu/~ylongqi/paper/YangCZPBE15.pdf" style="color:darkblue"><strong>[PDF]</strong></a>
                             </br>
                             YANG, L., CUI, Y., ZHANG, F., POLLAK, JP., BELONGIE, S. AND ESTRIN, D. <i>In Proceedings of the 24th ACM International Conference on Information and Knowledge Management <strong>(CIKM)</strong>, Melbourne, Australia, October 2015</i>
 
