--- a/index.html
+++ b/index.html
@@ -481,15 +481,17 @@
                         <p class="text-muted">Developer in residence</p>
                     </div>
                 </div>
+
                 <div class="col-sm-3">
                     <div class="team-member">
 
-                        <a href=""><img src="img/team/christina_2.jpeg" class="img-responsive img-circle" alt=""></a>
-                        <h4>Christina Tsangouri</h4>
+                        <a href=""><img src="img/team/yasmeen.png" class="img-responsive img-circle" alt=""></a>
+                        <h4>Yasmeen Hassan</h4>
                         <p class="text-muted">Intern</p>
 
                     </div>
                 </div>
+
                 <div class="col-sm-3">
                     <div class="team-member">
 
@@ -590,31 +592,31 @@
                   <tr>
                       <td>
                           <strong> Unbiased Offline Recommender Evaluation for Missing-Not-At-Random Implicit Feedback.</strong> <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangCXWBE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          YANG, L., CUI, Y., XUAN, Y., WANG, C., BELONGIE, S., ESTRIN, D.<i>To Appear in the 12th ACM Conference on Recommender Systems (RecSys), 2018.</i>
+                          YANG, L., CUI, Y., XUAN, Y., WANG, C., BELONGIE, S., ESTRIN, D.
                       </td>
                   </tr>
                   <tr>
                       <td>
                           <strong> Exploring Recommendations Under User-Controlled Data Filtering.</strong> <a href="http://www.cs.cornell.edu/~ylongqi/paper/WenYSE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          WEN, H., YANG, L., SOBOLEV, M., ESTRIN, D.<i>To Appear in the 12th ACM Conference on Recommender Systems (RecSys), 2018.</i>
+                          WEN, H., YANG, L., SOBOLEV, M., ESTRIN, D.
                       </td>
                   </tr>
                   <tr>
                       <td>
                           <strong>  Understanding User Interactions with Podcast Recommendations Delivered Via Voice.</strong> <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangSTE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          YANG, L., SOBOLEV, M., TSANGOURI, C., ESTRIN, D.<i>To Appear in the 12th ACM Conference on Recommender Systems (RecSys), 2018.</i>
+                          YANG, L., SOBOLEV, M., TSANGOURI, C., ESTRIN, D.
                       </td>
                   </tr>
                   <tr>
                       <td>
                           <strong> Open mHealth: Common Data Schemas and API for Mobile Health Data.</strong> <a href="papers/small_data_applications__alldata_2018.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          CARINI, S., FARRUGIA, E., HADDAD, D., ESTRIN, D., KUMAR, S., SIM, I.<i>To Appear in AMIA 2018 Informatics Summit, 2018.</i>
+                          CARINI, S., FARRUGIA, E., HADDAD, D., ESTRIN, D., KUMAR, S., SIM, I.
                       </td>
                   </tr>
                   <tr>
                       <td>
                           <strong> Characterizing User Skills from Application Usage Traces with Hierarchical Attention Recurrent Networks.</strong> <a href="papers/small_data_applications__alldata_2018.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          YANG, L., FANG, C., JIN, H., HOFFMAN, M.D., ESTRIN, D.<i>To Appear in ACM Transactions on Intelligent Systems and Technology (TIST), 2018.</i>
+                          YANG, L., FANG, C., JIN, H., HOFFMAN, M.D., ESTRIN, D.
                       </td>
                   </tr>
                     <tr>
@@ -1261,6 +1263,16 @@ Though the correspondence of features between the two SDKs isn’t one-to-one, t
                 </div>
                 <div class="container">
                     <div class="row">
+
+                      <div class="col-sm-3">
+                          <div class="team-member">
+
+                              <a href=""><img style="height: 225px;" src="img/team/christina_2.jpeg" class="img-responsive img-circle" alt=""></a>
+                              <h4>Christina Tsangouri</h4>
+                              <!--<p class="text-muted" style="text-align: center">mHealth Research Coordinator</p>-->
+
+                          </div>
+                      </div>
 
                         <div class="col-sm-3">
                             <div class="team-member">
