publication references added

--- a/index.html
+++ b/index.html
@@ -592,30 +592,30 @@
                   <tr>
                       <td>
                           <strong> Unbiased Offline Recommender Evaluation for Missing-Not-At-Random Implicit Feedback.</strong> <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangCXWBE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          YANG, L., CUI, Y., XUAN, Y., WANG, C., BELONGIE, S., ESTRIN, D.
+                          YANG, L., CUI, Y., XUAN, Y., WANG, C., BELONGIE, S., ESTRIN, D.<i> In Twelfth ACM Conference on Recommender Systems (RecSys ’18)</i> October 2018
                       </td>
                   </tr>
                   <tr>
                       <td>
                           <strong> Exploring Recommendations Under User-Controlled Data Filtering.</strong> <a href="http://www.cs.cornell.edu/~ylongqi/paper/WenYSE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          WEN, H., YANG, L., SOBOLEV, M., ESTRIN, D.
+                          WEN, H., YANG, L., SOBOLEV, M., ESTRIN, D.<i> In Twelfth ACM Conference on Recommender Systems (RecSys ’18) </i> October 2018
                       </td>
                   </tr>
                   <tr>
                       <td>
                           <strong>  Understanding User Interactions with Podcast Recommendations Delivered Via Voice.</strong> <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangSTE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          YANG, L., SOBOLEV, M., TSANGOURI, C., ESTRIN, D.
+                          YANG, L., SOBOLEV, M., TSANGOURI, C., ESTRIN, D.<i> In Twelfth ACM Conference on Recommender Systems (RecSys ’18)</i> October 2018
                       </td>
                   </tr>
                   <tr>
                       <td>
-                          <strong> Open mHealth: Common Data Schemas and API for Mobile Health Data.</strong> <a href="papers/small_data_applications__alldata_2018.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                          <strong> Open mHealth: Common Data Schemas and API for Mobile Health Data.</strong> <a href="" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
                           CARINI, S., FARRUGIA, E., HADDAD, D., ESTRIN, D., KUMAR, S., SIM, I.
                       </td>
                   </tr>
                   <tr>
                       <td>
-                          <strong> Characterizing User Skills from Application Usage Traces with Hierarchical Attention Recurrent Networks.</strong> <a href="papers/small_data_applications__alldata_2018.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                          <strong> Characterizing User Skills from Application Usage Traces with Hierarchical Attention Recurrent Networks.</strong> <a href="" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
                           YANG, L., FANG, C., JIN, H., HOFFMAN, M.D., ESTRIN, D.
                       </td>
                   </tr>
