--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                   <tr>
                       <td>
                           <strong> Characterizing User Skills from Application Usage Traces with Hierarchical Attention Recurrent Networks.</strong> <a href="" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
-                          YANG, L., FANG, C., JIN, H., HOFFMAN, M.D., ESTRIN, D.
+                          YANG, L., FANG, C., JIN, H., HOFFMAN, M.D., ESTRIN, D.<i>ACM Transactions on Intelligent Systems and Technology (TIST)</i>
                       </td>
                   </tr>
                     <tr>
