--- a/index.html
+++ b/index.html
@@ -588,7 +588,14 @@
                     <!--</th>-->
                 <!--</tr>-->
                 <!--</thead>-->
+
                 <tbody>
+                  <tr>
+                      <td>
+                          <strong> An mHealth App for Self-Management of Chronic Lower Back Pain (Limbr): Pilot Study.</strong> <a href="https://mhealth.jmir.org/2018/9/e179/" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                          SELTER, A., TSANGOURI, C., ALI, S., FREED, D., VATCHINSKY, A., KIZER, J., SAHUGUET, A., VOJTA, D., VAD, V., POLLAK, J., ESTRIN, D.<i> JMIR Mhealth Uhealth 2018</i> September 2017
+                      </td>
+                  </tr>
                   <tr>
                       <td>
                           <strong> Unbiased Offline Recommender Evaluation for Missing-Not-At-Random Implicit Feedback.</strong> <a href="http://www.cs.cornell.edu/~ylongqi/paper/YangCXWBE18.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
