--- a/index.html
+++ b/index.html
@@ -592,6 +592,12 @@
                 <tbody>
                   <tr>
                       <td>
+                          <strong> Good Vibrations: Can a Digital Nudge Reduce Digital Overload? </strong> <a href="http://www.nixdell.com/papers/vibrations.pdf" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
+                          OKEKE, F., SOBOLEV, M., Dell, N., ESTRIN, D.<i> International Conference on Human-Computer Interaction with Mobile Devices and Services (MobileHCI 2018). </i> September 2018
+                      </td>
+                  </tr>
+                  <tr>
+                      <td>
                           <strong> An mHealth App for Self-Management of Chronic Lower Back Pain (Limbr): Pilot Study.</strong> <a href="https://mhealth.jmir.org/2018/9/e179/" style="color:darkblue"><strong>[PDF]</strong></a></strong></br>
                           SELTER, A., TSANGOURI, C., ALI, S., FREED, D., VATCHINSKY, A., KIZER, J., SAHUGUET, A., VOJTA, D., VAD, V., POLLAK, J., ESTRIN, D.<i> JMIR Mhealth Uhealth 2018</i> September 2017
                       </td>
